# nixos

./: .commitlintrc.yaml  .gitignore  README.adoc  README.md  configuration.nix  flake.nix  format.sh  hardware-configuration.nix  imperative-actions.adoc  imperative_actions.adoc  init.vim  install.bash  repl.nix  shell.nix  treefmt.nix
.github/workflows/: check.yml
ci/: default.nix  pinned-nixpkgs-for-nixshell.json  update-shell-lock.sh
hosts/: desktop.nix  install.nix  thinkpad.nix
hosts/desktop/: desktop.nix  disko-config.nix  hardware-configuration-desktop.nix
hosts/install/: configuration.nix  install.nix
hosts/pc/: disko-config.nix  hardware-configuration.nix  pc.nix
hosts/pc/install/: install.nix
hosts/thinkpad/: disko-config.nix  hardware-configuration-thinkpad.nix  thinkpad.nix
hosts/thinkpad/install/: install.nix
modules/: alacritty.nix  audioEffects.nix  constants.nix  extraLib.nix  fish.nix  flameshot.nix  gaming.nix  git.nix  hyprland.nix  impermanence.nix  incus.nix  kasts.nix  keyboard.nix  lib.nix  librewolf.nix  media-management.nix  mimeapps.nix  mpv.nix  myAichat.nix  myAudioEffects.nix  myAwesome.nix  myComma.nix  myConstants.nix  myDolphin.nix  myEmacs.nix  myExtraLib.nix  myFlameshot.nix  myGaming.nix  myHyprland.nix  myIamb.nix  myImpermanence.nix  myLib.nix  myLibrewolf.nix  myMPV.nix  myMullvad.nix  myNeovim.nix  myNiri.nix  myPackages.nix  myPipewire.nix  myPrismlauncher.nix  (+41 more)
modules/kernel/: pc.config  pc.nix
modules/neovim/: myNeovide.nix  myNeovim.nix
modules/neovim/plugins/: myDial.nix  myFlash.nix  myGruvbox.nix  myGruvboxMaterial.nix  myHarpoon.nix  myRainbow.nix  mySpider.nix  myTelescope.nix  myVimVisualMulti.nix
modules/specializations/: myGnome.nix
modules/visuals/: kvantumBasedQt.nix  myAdwaitaDarkQT.nix  myCursor.nix  myGnomeBasedQT.nix  myGtkBasedQT.nix  myImperativeKvantumBasedQT.nix  myKvantumBasedQT.nix  myNixBasedQT.nix  myTheme.nix  myThemeCore.nix  theme.nix  themeCore.nix
modules/waybar/: lib.nix  style.nix  waybar.nix
modules/x11/: myPicom.nix  myXorgBase.nix  picom.nix  xorgBase.nix
modules/zsh/: myZSH.nix  zsh.nix
modules/zsh/plugins/: autosuggestions.nix  clipboard.nix  fsh.nix  notify.nix  p10k.nix
resources/: krita-extraConfig  librewolf-bin.nix  niri.kdl  nvim-extraConfig.vim  plfi  polish-finnish-layout.xkb  rofi-extraConfig.rasi  zsh-extraConfig
resources/anki/: prefs21.db
resources/awesome/: rc.lua  theme.lua
resources/awesome/lain/: helpers.lua
resources/awesome/topdir/: rc.lua
resources/convertlink/: convertlink.cabal
resources/cookiecutterTemplates/haskell-nix-package-rio/: cookiecutter.json
resources/cookiecutterTemplates/haskell-nix-package-rio/{{cookiecutter.project_slug}}/: Main.hs  {{cookiecutter.binaryName}}.cabal
resources/cookiecutterTemplates/haskell-nix-rio/: cookiecutter.json
resources/cookiecutterTemplates/haskell-nix-rio/{{cookiecutter.project_slug}}/: README.adoc  README.md  {{cookiecutter.binaryName}}.cabal
resources/cookiecutterTemplates/haskell-nix-rio/{{cookiecutter.project_slug}}/app/: Main.hs
resources/haskell/: devenv.nix
resources/haskell/convertlink/: Main.hs  convertlink.cabal  default.nix  shell.nix
resources/haskell/drug2/: cabal.project.freeze  drug2.cabal
resources/haskell/drug2/app/: Main.hs
resources/haskell/drug2/src/: Config.hs  List.hs  Take.hs  Types.hs
resources/haskell/drugtracker2/: Config.hs  List.hs  Main.hs  Take.hs  Types.hs  default.nix  drug2.cabal
resources/haskell/niri-switch-keyboard-rofi/: Main.hs  default.nix  niri-switch-keyboard.cabal
resources/haskell/ow/: Main.hs  default.nix  ow.cabal
resources/haskell/programs/drugtracker2/: Main.hs  drug2.cabal
resources/haskell/reltime/: Main.hs  default.nix  reltime.cabal
resources/haskell/timezones/: Main.hs  default.nix  timezones.cabal
resources/haskell/xmonad/: build  default.nix  xmonad.hs  xmonadrc.cabal
resources/haskell/xmonad/lib/: Defaults.hs  Help.hs  KeyBindings.hs  Layout.hs  LogHook.hs  ManageHook.hs  MouseBindings.hs  StartupHook.hs  TrueFullscreen.hs  WindowRules.hs
resources/krita/: kritarc
resources/krita/krita-toplevel/: Awez_Basic_Brushes.bundle  Awez_Flat_Brush_Pack.bundle  Awez_Grime_Machine.bundle  Awez_Hard_Rough_Brushes_UPDATE1.bundle  Crayons_V1.bundle  ECoR_50-Sub_Special_Bundle.bundle  Hard_Charcoals.bundle  Impression_V1.1_2023.bundle  WET_BRUSH_4PACK-bejaminround.bundle  backgrounds_mypaint.bundle  classic_mypaint.bundle  conceptdesign_mypaint.bundle  deevad_mypaint.bundle  dirtyoffset_mypaint.bundle  experimental_mypaint.bundle  hu_graphite_v01.bundle  ico_dy_mypaint.bundle  kaerhon_mypaint.bundle  loula_mypaint.bundle  lur_noises_brush_pack_(for_krita).bundle  mojo_mypaint.bundle  ramon(complete)_mypaint.bundle  ramon_mypaint.bundle  rudluff_mypaint.bundle  senlinos_mypaint.bundle  tanda(complete)_mypaint.bundle  tone_mypaint.bundle
resources/mpv/: interSubs.lua  interSubs.py  interSubs_config.py
resources/niri/: dynamic-zoom.patch  dynamic-zoom2.patch  float-over-fullscreen.patch  niri.kdl  transparent-fullscreen-pr.patch  transparent-fullscreen.patch
resources/saygo-utils/: .gitignore  cabal.project  default.nix  gi-notify.patch  saygo-utils.cabal  shell.nix
resources/saygo-utils/src/: clean-nix-paths.hs  convertlink.hs  free-space.hs  githubloc.hs  hyprctl-switch-keyboard.hs  hyprland-monitor-toggle.hs  niri-switch-keyboard.hs  ow-gen1-selector.hs  owt.hs  saygo-record.hs  timezones.hs  tmux-mem.hs  xkb-switch-keyboard.hs
resources/scripts/: convertlink.hs  format-udf.sh  hyprctl-switch-rofi.dash  hyprctl-switch-rofi.sh  hyprland-next-visible-client.bash  hyprland-next-visible-client.sh  keepfilelist.py  monitor-toggle.bash  monitor-toggle.sh  ow.py  vmrss.sh  xkb-switch-rofi.bash
resources/static/: hardware-configuration-thinkpad.nix  hardware-configuration.nix  tmux-mem-cpp
resources/static/qt/: qt5ct.conf  qt6ct.conf  (+1 more)
resources/waybar/: config.jsonc
resources/wireplumber/: autoconnect.lua
resources/xmonad/: default.nix  devenv.nix
resources/zathura/: zathurarc
resources/zsh/: p10k-prompt.zsh
(+152 files in other folders)
