cabal-version:   2.4
name:            saygo-utils
version:         0
build-type:      Simple
author:          saygo-png
maintainer:      saygo-png <saygo.mail@proton.me>
copyright:       2024 saygo-png
description:     Utilities for my NixOS config
tested-with:     GHC ==9.8.4

common common-options
  build-depends: base, shh, universum, aeson, optparse-applicative, time, tz, bytestring, path, cassava, path-io, safe, vector
  default-language: GHC2021
  ghc-options: -Weverything -Wno-missing-kind-signatures -Wno-safe -Wno-unsafe -Wno-missing-import-lists -Wno-all-missed-specialisations -Wno-missed-specialisations -Wno-missing-safe-haskell-mode -Wno-missing-exported-signatures -Wno-missing-local-signatures -Wno-unused-packages
               -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude NoFieldSelectors OverloadedRecordDot DuplicateRecordFields BangPatterns BinaryLiterals ConstraintKinds DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DoAndIfThenElse EmptyDataDecls ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns PartialTypeSignatures PatternGuards PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeFamilies TypeSynonymInstances ViewPatterns DerivingStrategies RoleAnnotations

executable niri-switch-keyboard
  import: common-options
  main-is: src/niri-switch-keyboard.hs

executable xkb-switch-keyboard
  import: common-options
  main-is: src/xkb-switch-keyboard.hs

executable hyprctl-switch-keyboard
  import: common-options
  main-is: src/hyprctl-switch-keyboard.hs

executable hyprland-monitor-toggle
  import: common-options
  main-is: src/hyprland-monitor-toggle.hs

executable timezones
  import: common-options
  main-is: src/timezones.hs

executable owt
  import: common-options
  main-is: src/owt.hs

executable free-space
  import: common-options
  main-is: src/free-space.hs
