cabal-version: >= 1.10
name:          xmonadrc
version:       1.0
synopsis:      My XMonad setup
license:       GPL-2
author:        Marc Jakobi <mrcjkb89@outlook.com>
maintainer:    Marc Jakobi <mrcjkb89@outlook.com>
category:      Graphics
build-type:    Simple

library
  exposed-modules:
    Defaults
    EventHandling
    Help
    KeyBindings
    Layout
    LogHook
    MouseBindings
    StartupHook
    WindowRules
    WindowState
  hs-source-dirs: lib
  ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded
  -- ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded   -Werror
  build-depends: base
    , xmonad
    , xmonad-contrib
    , containers
    , X11
  default-language: Haskell2010

executable xmonadrc
  main-is: xmonad.hs
  ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded
  -- ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded   -Werror
  build-depends: base
    , xmonad
    , xmonad-contrib
    , xmonadrc
  default-language: Haskell2010
