cabal-version: >= 1.10
name:          xmonadrc
version:       1.0
synopsis:      My XMonad setup
license:       GPL-2
author:        Saygo <saygo.mail@proton.me>
maintainer:    Saygo <saygo.mail@proton.me>
category:      Graphics
build-type:    Simple

library
  exposed-modules:
    Defaults
    EventHandling
    KeyBindings
    TrueFullscreen
    Layout
    LogHook
    MouseBindings
    StartupHook
    ManageHook
    WindowState
  hs-source-dirs: lib
  ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded -haddock
  -- ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded   -Werror
  build-depends: base
    , xmonad
    , xmonad-contrib
    , containers
    , X11
    , flow
  default-language: Haskell2010

executable xmonad
  main-is: xmonad.hs
  ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded -haddock
  -- ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded   -Werror
  build-depends: base
    , xmonad
    , xmonad-contrib
    , xmonadrc
    , flow
  default-language: Haskell2010
