cabal-version:   2.4
name:            {{cookiecutter.binaryName}}
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          saygo-png
maintainer:      saygo-png <saygo.mail@proton.me>
copyright:       2024 saygo-png
description:     {{cookiecutter.projectDescription}}
tested-with:     GHC ==9.6.5
extra-doc-files:
  README.md

common common-options
  build-depends:    base >=4.9 && <5, aeson, bytestring, vector, process, process-extras
  default-language: GHC2021
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  other-extensions: AutoDeriveTypeable BangPatterns BinaryLiterals ConstraintKinds DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DoAndIfThenElse EmptyDataDecls ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MonadFailDesugaring MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude OverloadedStrings PartialTypeSignatures PatternGuards PolyKinds RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TupleSections TypeFamilies TypeSynonymInstances ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable {{cookiecutter.binaryName}}-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends: {{cookiecutter.binaryName}}

test-suite {{cookiecutter.binaryName}}-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , {{cookiecutter.binaryName}}
    , QuickCheck

benchmark {{cookiecutter.binaryName}}-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , {{cookiecutter.binaryName}}
